Added get, read notification
